Deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: cart-page-rs 
  namespace: prod-ns 
spec: # Defines behaviour of the ReplicaSet 
  replicas: 1
  selector:
    matchLabels:
      web: app 
  template:  # blue print of the pod 
    metadata:
      labels:
        web: app 
    spec: # Define the behaviour of the Pod 
      containers:
        - name: cart-container 
          image: muralisocial123/cart-page-example:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1 
kind: Service 
metadata: 
  name: cart-svc
  namespace: prod-ns  
spec: 
  selector:
    web: app
  ports:
    - port: 3001 # Service Port Number
      targetPort: 3000  # Where Actually application is running 
      protocol: TCP 
  type: ClusterIP
