web-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: web-test-deployment
  namespace: prod-ns 
spec: # Defines behaviour of the ReplicaSet 
  replicas: 1
  selector:
    matchLabels:
      web: test
  template:  # blue print of the pod 
    metadata:
      labels:
        web: test
    spec: # Define the behaviour of the Pod 
      containers:
        - name: test-container 
          image: muralisocial123/test-web-oracle-example:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata: 
  name: test-svc 
  namespace: prod-ns 
spec: 
  selector:
    web: test 
  ports:
    - port: 81 # Service Port Number
      targetPort: 80  # Where Actually application is running 
      protocol: TCP 
  type: NodePort
