ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cart(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cart-svc
            port:
              number: 3001
      - path: /organic(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: organic-svc
            port:
              number: 5657
      - path: /test(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 81
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 81
